web/style/main.scss
@use 'root.scss';
@use 'hamburger.scss';
@use 'clog.scss';
@use 'nav.scss';
@use 'contact.scss';
@use 'third-party.scss';
@use 'sass:string';

nav {
  a {
    color: #000;
    text-decoration: none;
    margin: 1ex;
    &[aria-current="page"] {
      font-weight: bold;
    }
  }
}

@media (prefers-reduced-motion: no-preference) {
  body[data-activate-transitions] {
    &, & * {
      transition: var(--default-transition);
    }
  }
}

body {
  display: grid;
  margin: 0px;
  grid-template-columns: [menu-start] 0px [menu-end main-start footer-start] 0px 100% 0px [footer-end main-end];
  &:has(> footer) {
    grid-template-rows: [menu-start] calc(var(--hamburger-size) + var(--button-margin) * 2) [main-start] auto [main-end footer-start] min-content [footer-end menu-end];
  }
  &:not(:has(> footer)) {
    grid-template-rows: [menu-start] calc(var(--hamburger-size) + var(--button-margin) * 2) [main-start] auto [main-end footer-start] 0 [footer-end menu-end];
  }
  time {
    white-space: nowrap;
    &:before {
      content: "";
      display: inline-block;
      white-space: revert;
    }
  }
  footer {
    border-top: 1px solid light-dark(#000, #fff);
    padding: 1ex;
  }
  overflow-x: hidden;

  @include nav.open($selector: &) {
    grid-template-columns: [menu-start] max-content [menu-end] 0px [main-start footer-start] 100% [footer-end main-end] 0px;
  }

  height: 100vh;
  counter-reset: footnote-link footnote-text;
  abbr:not(.first-of-abbr) {
    text-decoration: none;
  }
  & > main {
    grid-area: main-start / main-start / main-end / main-end;
    padding: 1em;
    img {
      max-width: 100%;
    }
    details {
      border: 1px solid #aaaaaa;
      border-radius: 4px;
      padding: 0.5em 0.5em 0;
      summary {
        font-weight: bold;
        margin: -0.5em -0.5em 0;
        padding: 0.5em;
        cursor: grab;
      }
      &[open] {
        padding: 0.5em;
        summary {
          border-bottom: 1px solid #aaaaaa;
          margin-bottom: 0.5em;
          cursor: grabbing;
        }
      }
      &.info {
        background: light-dark(#ccffcc, #003300);
        background-blend-mode: multiply;
        &:not([open]) > summary:hover:not(:active) {
            background: #10ee10;
          }
        & > summary {
          &::marker {
            content: "\1F50E  ";
            display: block;
            padding-right: 2em;
          }
        }
      }
    }

    del {
      background: rgba(255, 0, 0, 0.2);
    }
    ins {
      background: rgba(0, 255, 0, 0.2);
      text-decoration: none;
    }
    a.footnote-link::after {
      counter-increment: footnote-link;
      content: counter(footnote-link);
    }
    section {
      margin-bottom: 1em;
    }
  }
  blockquote {
    display: block;
    padding-left: 1em;
    margin-left: 1em;
    border-left: 2px solid light-dark(rgba(0, 0, 0, 0.5), rgba(255, 255, 255, 0.5));
    &[cite]:after {
      display: block;
      padding-top: 1ex;
      padding-left: 1ex;
      content: "- " attr(cite);
      font-size: 75%;
      font-style: revert;
    }
  }
  q {
    &:before {
      content: "‘";
    }
    font-style: italic;
    &:after {
      content: "’";
    }
  }
  main a.footnote-link::after, & > footer > div::before {
    vertical-align: super;
    text-decoration: none;
    display: inline-block;
    font-size: 67%;
  }
  main a.footnote-link {
    @keyframes scale-footnote-number {
      0% {
        transform: scale(1);
        opacity: 1;
      }
      25% {
        transform: scale(10);
        opacity: 0.5;
      }
      50% {
        transform: scale(2);
        opacity: 1;
      }
      75% {
        transform: scale(10);
        opacity: 0.5;
      }
      100% {
        transform: scale(1);
        opacity: 1;
      }
    }
    &::after {
      padding: 50vh 0;
      margin: -50vh 0;
    }
    &:target, &[aria-current] {
      &::after {
        padding: revert;
        margin: revert;
        animation-name: scale-footnote-number;
        animation-timing-function: ease-in-out;
        animation-duration: 2s;
      }
    }
  }
  & > footer {
    display: grid;
    grid-area: footer-start / footer-start / footer-end / footer-end;
    grid-auto-flow: row;
    & > div {
      &[aria-current], &:target {
        background: rgba(255, 255, 0, 0.25);
      }
      display: grid;
      grid-auto-columns: max-content auto max-content;
      grid-auto-flow: column;
      &::before {
        display: block;
        grid-column: 1;
        counter-increment: footnote-text;
        content: counter(footnote-text);
      }
      & > a.footnote-return-link {
        grid-column: 3;
        text-decoration: none;
        display: grid;
        grid-template-rows: 1fr [start] auto [end] 1fr;
        grid-template-columns: [start] auto [end];
        &::after {
          grid-area: start / start / end / end;
          content: "\1F519";
        }
      }
    }
  }
  &, main {
    background: light-dark(#ffffff, #222222);
  }
  div.note {
    border-radius: 0.25em;
    padding: 0.5em;
    padding-left: 2.5em;
    background: light-dark(#a4cefe,#044c9f);
    color: --font-color;
    &:before {
      content: "\2139";
      font: var(--symbol-font-text);
      font-family: u1f400;
      text-rendering: optimizeLegibility;
      display: block;
      position: relative;
      height: fit-content;
      width: 0;
      height: 0;
      overflow: visible;
      left: -1.5em;
    }
  }
  kbd {
    background-color: #eeeeee;
    border-radius: 3px;
    border: 1px solid #b4b4b4;
    box-shadow:
      0 1px 1px rgb(0 0 0 / 0.2),
      0 2px 0 0 rgb(255 255 255 / 0.7) inset;
    color: #333333;
    display: inline-block;
    font-size: 0.85em;
    font-weight: bold;
    line-height: 1;
    padding: 2px 4px;
    white-space: nowrap;
    text-transform: capitalize;
  }
}

@media print {
  ::details-content {
    content-visibility: visible;
    height: auto !important;
  }
  body {
    display: inline;
    grid-template-columns: 0px 0px [main-start] auto [main-end] 0px !important;
    grid-template-rows: 0px [main-start] max-content [main-end] 0px !important;
    nav { display: none };
    main {
      border-radius: 0 !important;
      background: #fff !important;
      color: #000;
      details {
        padding: 0.5em;
        summary {
          border-bottom: 1px solid #aaaaaa;
          margin-bottom: 0.5em;
        }
      }
    }
    section, main li {
      break-inside: avoid;
    }
    a:not(.just-url) {
      &[href^="https://"], &[href^="http://"] {
        &:after {
          content: " (" attr(href) ")";
          text-decoration-line: none;
          color: #000;
          font-weight: normal;
        }
      }
    }
    footer > div > a.footnote-return-link {
      display: none;
    }
  }
}

@media (any-hover: none), print {
  abbr {
    text-decoration: none;
    &.first-of-abbr {
      &::before {
        content: attr(title) " (";
      }
      &::after {
        content: ")";
      }
    }
  }
}

